--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,6 @@
 			<artifactId>jnativehook</artifactId>
 			<version>2.0.3</version>
 		</dependency>
-<!--		<dependency>
-		    <groupId>com.github.jiconfont</groupId>
-		    <artifactId>jiconfont</artifactId>
-		    <version>1.0.0</version>
-		</dependency> -->
 		<dependency>
 			<groupId>com.github.jiconfont</groupId>
 			<artifactId>jiconfont-swing</artifactId>
@@ -33,31 +28,16 @@
 			<artifactId>jiconfont-font_awesome</artifactId>
 			<version>4.7.0.0</version>
 		</dependency>
-<!--	<dependency>
-		    <groupId>com.github.pervoj</groupId>
-		    <artifactId>jiconfont-font-awesome</artifactId>
-		    <version>1.0.2</version>
-		</dependency> -->
 		<dependency>
 			<groupId>com.github.jiconfont</groupId>
 			<artifactId>jiconfont-elusive</artifactId>
 			<version>2.0.1</version>
 		</dependency>
-<!--	<dependency>
-			<groupId>com.github.jiconfont</groupId>
-			<artifactId>jiconfont-entypo</artifactId>
-			<version>2.0.1</version>
-		</dependency> -->
 		<dependency>
 			<groupId>com.github.jiconfont</groupId>
 			<artifactId>jiconfont-open_iconic</artifactId>
 			<version>1.1.1.1</version>
 		</dependency>
-<!--	<dependency>
-			<groupId>com.github.jiconfont</groupId>
-			<artifactId>jiconfont-typicons</artifactId>
-			<version>2.0.7.0</version>
-		</dependency> -->
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
@@ -68,12 +48,9 @@
 			<artifactId>darklaf-core</artifactId>
 			<version>3.0.2</version>
 		</dependency>
-
-
 	</dependencies>
 
-
-	<!-- Use "mvn package" to build a runnable jar with all dependencies added -->
+  <!-- Use "mvn package" to build a runnable jar for linux with all dependencies added -->
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<resources>
